--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -8,7 +8,7 @@
                             <input type="search" name="" id="" class="form-control">
                     </div>
                     <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                        <button class="btn btn-primary">search</button>
+                        <button class="btn btn-primary">Edit</button>
                     </div>
                 </div>
             </div>
