--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -15,13 +15,13 @@
                     <input type="password" name="" id="" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                    <button class="btn btn-success">Login</button>
+                    <button class="btn btn-success" routerLink="/add">Login</button>
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                    <a href="">Goto user Registration</a>
+                    <a routerLink="/signup">Goto user Registration</a>
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                    <a href="">Back to Admin Registration</a>
+                    <a routerLink="">Back to Admin Registration</a>
                 </div>
             </div>
         </div>
