--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,13 +31,13 @@
 
                 </div>
                 <div class="col- col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                    <button class="btn btn-success">Login</button>
+                    <button class="btn btn-success" routerLink="/add">Login</button>
                  </div>
                  <div class="col- col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                    <a href="">User Registration</a>
+                    <a routerLink="/signup">User Registration</a>
                  </div> 
                  <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">    
-                    <a href="">User Login</a> 
+                    <a routerLink="/userlogin">User Login</a> 
                  </div>
                   
             </div>
