--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -5,10 +5,10 @@
                 <div class="row g-3 mt-4">
                     <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                             <label for="" class="form-label">BooK Title</label>
-                            <input type="search" name="" id="" class="form-control">
+                            <input type="search" name="title" [(ngModel)]="title" id="" class="form-control">
                     </div>
                     <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                        <button class="btn btn-primary">search</button>
+                        <button (click)="search()" class="btn btn-primary">search</button>
                     </div>
                 </div>
             </div>
