--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -15,7 +15,7 @@
                     <input type="password" name="Password" [(ngModel)]="Password" id="" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                    <button (click)="login()" class="btn btn-success" routerLink="/add">Login</button>
+                    <button (click)="login()" class="btn btn-success" >Login</button>
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
                     <a routerLink="/signup">Goto user Registration</a>
