--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,7 +31,7 @@
 
                 </div>
                 <div class="col- col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                    <button (click)="log()" class="btn btn-success" routerLink="/add">Login</button>
+                    <button (click)="log()" class="btn btn-success">Login</button>
                  </div>
                  <div class="col- col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
                     <a routerLink="/signup">User Registration</a>
