--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -13,19 +13,19 @@
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
 
                     <label for="" class="form-label">Adhaar Number</label>
-                    <input name="adhaarNumber" [(ngModel)]="adhaarNumber" type="text" class="form-control">
+                    <input name="adhaar" [(ngModel)]="adhaar" type="text" class="form-control">
 
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
 
-                    <label for="" class="form-label">Adress</label>
-                    <textarea name="adress" [(ngModel)]="adress" id="" cols="30" rows="5" class="form-control"></textarea>
+                    <label for="" class="form-label">Address</label>
+                    <textarea name="address" [(ngModel)]="address" id="" cols="30" rows="5" class="form-control"></textarea>
 
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
 
                     <label for="" class="form-label">Pincode</label>
-                    <input name="Pincode" [(ngModel)]="Pincode" type="text" class="form-control">
+                    <input name="pincode" [(ngModel)]="pincode" type="text" class="form-control">
 
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
@@ -43,7 +43,7 @@
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
 
                     <label for="" class="form-label">Phone Number</label>
-                    <input name="PhoneNumber" [(ngModel)]="PhoneNumber" type="text" class="form-control">
+                    <input name="phoneno" [(ngModel)]="phoneno" type="text" class="form-control">
 
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
@@ -55,13 +55,13 @@
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
 
                     <label for="" class="form-label">Password</label>
-                    <input type="password" name="Password" [(ngModel)]="Password" id="" class="form-control">
+                    <input type="password" name="password" [(ngModel)]="password" id="" class="form-control">
 
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
 
                     <label for="" class="form-label">Confirm Password</label>
-                    <input type="password" name="confirmPassword" [(ngModel)]="confirmPassword" id="" class="form-control">
+                    <input type="password" name="confirmpassword" [(ngModel)]="confirmpassword" id="" class="form-control">
 
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
