--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,16 +1,35 @@
 <app-nav-bar></app-nav-bar>
-    <div class="container">
-        <div class="row">
-            <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                <div class="row g-3 mt-4">
-                    <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                            <label for="" class="form-label">BooK Title</label>
-                            <input type="search" name="title" [(ngModel)]="title" id="" class="form-control">
+<div class="container">
+    <div class="row">
+        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+            <h1 class="text-center" style="color:#323773;font-size:xx-large; line-height: 1.5;font-size: 40px;" >Search Book</h1>
+            <div class="row g-3 mt-4">
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                    <label for="" class="form-label">Book Title</label>
+                    <input type="text" name="booktitle" [(ngModel)]="booktitle" class="form-control">
+                </div>
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
+                    <button (click)="readvalue()"  class="btn btn-success">Search</button>
+                </div>
+            </div>
+            <div class="row g-3 mt-4">
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3" *ngFor="let j of searchData">
+                    <div class="card h-100">
+                        <img height="100px" width="500px" src="{{j.image}}"class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item" style="font-weight: 700;">{{j.booktitle}}</li>
+                                <li class="list-group-item">{{j.author}}</li>
+                                <li class="list-group-item">{{j.description}}</li>
+                                <a  class="btn btn-primary">Buy Now</a>
+                              </ul>
+                        </div>
                     </div>
                     <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                        <button (click)="search()" class="btn btn-primary">search</button>
+                        <button (click)="deleteClick(j.id)" class="btn btn-danger">Delete</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>        
