--- a/src/app/entry/entry.component.html
+++ b/src/app/entry/entry.component.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
             <div class="row g-3 mt-4">
-                <h2 class="text-center"><u>Book Entry</u></h2>
+                <h3 class="text-center top"style="color:#323773;line-height: 1.5;font-size: 40px;top: 8px;">Book Entry</h3>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Book Title</label>
                     <input name="booktitle" [(ngModel)]="booktitle" type="text" class="form-control">
