--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,7 @@
     <div class="row">
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
             <div class="row g-3 mt-4">
-                <h3 class="text-center">Administrator Login</h3>
+              <h3 class="text-center top"style="color:#323773;line-height: 1.5;font-size: 40px;top: 8px;">Admin Login</h3>
                 <div class="col- col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">User Name</label>
                     <input name="username" [(ngModel)]="username" type="text" class="form-control">
