--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -19,6 +19,9 @@
             <a class="nav-link text-light" routerLink="/view">View Books</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link text-light" routerLink="/issue">Issue Books</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link text-light" routerLink="">Logout</a>
           </li>
         </ul>
