--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -3,6 +3,7 @@
     <div class="row">
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
             <div class="row g-3 mt-4">
+                <h3 class="text-center top"style="color:#323773;line-height: 1.5;font-size: 40px;top: 8px;">View Books</h3>
                 <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3" *ngFor="let j of data">
 
                     <div class="card h-100">
